# calculus

./: .gitignore  CMakeLists.txt
include/Matrix/: matrix.h
include/Solver/: solver.cpp  solver.h
include/Utils/: utils.h
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
